cluster/resources/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monobot-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - monobot.fr
    - mediobot.monobot.fr
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - monobot.fr
    - mediobot.monobot.fr
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
